Add journal to bibtex entry

--- a/bayesian_plate_reconstruction.bib
+++ b/bayesian_plate_reconstruction.bib
@@ -289,6 +289,7 @@
   title={Late Precambrian Keweenawan asymmetric reversals},
   author={Pesonen, LJ and Nevanlinna, H},
   year={1981},
+  journal={Nature},
   publisher={Nature Publishing Group}
 }
 
